# synapse-ui/src/app/services/models/user-profile-response.ts
@@ -1,0 +1,10 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface UserProfileResponse {
+  email?: string;
+  emailVerified?: boolean;
+  firstName?: string;
+  id?: string;
+  lastName?: string;
+}
