# synapse/src/main/java/com/synapse/synapse/user/UserController.java
@@ -7,6 +7,7 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
@@ -20,7 +21,15 @@ public class UserController {
     private final UserService service;
 
 
+    @GetMapping("/me")
+    @PreAuthorize("isAuthenticated()")
+    public UserProfileResponse getProfile(Authentication principal) {
+        return service.getProfile(getUserId(principal));
+    }
+
+
     @PatchMapping("/me")
+    @PreAuthorize("isAuthenticated()")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void updateProfile(
             @RequestBody
@@ -35,6 +44,7 @@ public class UserController {
 
 
     @PostMapping("/me/password")
+    @PreAuthorize("isAuthenticated()")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void changePassword(
             @RequestBody
@@ -45,18 +55,21 @@ public class UserController {
     }
 
     @PatchMapping("/me/deactivate")
+    @PreAuthorize("isAuthenticated()")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void deactivateAccount(final Authentication principal) {
         this.service.deactivateAccount(getUserId(principal));
     }
 
     @PatchMapping("/me/reactivate")
+    @PreAuthorize("isAuthenticated()")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void reactivateAccount(final Authentication principal) {
         this.service.reactivateAccount(getUserId(principal));
     }
 
     @DeleteMapping("/me")
+    @PreAuthorize("isAuthenticated()")
     @ResponseStatus(code = HttpStatus.NO_CONTENT)
     public void deleteAccount(final Authentication principal) {
         this.service.deleteAccount(getUserId(principal));
