# synapse/src/main/java/com/synapse/synapse/user/UserProfileResponse.java
@@ -1,0 +1,19 @@
+package com.synapse.synapse.user;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserProfileResponse {
+
+    private String id;
+    private String firstName;
+    private String lastName;
+    private String email;
+    private boolean emailVerified;
+}
